tree-sitter-fantom/grammar.js
    source_file: $ => seq(
      repeat($.using_statement),
      repeat($._type_definition),
    ),

    // ============================================
    // Using Statements
    // ============================================
    _type_definition: $ => choice(
      $.class_definition,
      $.mixin_definition,
      $.enum_definition,
      $.facet_definition,
    ),

    class_definition: $ => seq(
      repeat($.facet),
      repeat($.modifier),
      'class',
      field('name', $.identifier),
      optional($.type_params),
      optional(seq(':', $.type_list)),
      field('body', $.class_body),
    ),

    mixin_definition: $ => seq(
      repeat($.facet),
      repeat($.modifier),
      'mixin',
      field('name', $.identifier),
      optional($.type_params),
      optional(seq(':', $.type_list)),
      field('body', $.class_body),
    ),

    enum_definition: $ => seq(
      repeat($.facet),
      repeat($.modifier),
      'enum',
      'class',
      field('name', $.identifier),
      optional(seq(':', $.type_list)),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      '{',
      optional($.enum_vals),
      repeat($._slot),
      '}',
    ),

    enum_vals: $ => prec(2, seq(
      $.enum_val,
      repeat(seq(',', $.enum_val)),
    )),

    enum_val: $ => prec(2, seq(
      field('name', $.identifier),
      optional($.call_args),
    )),

    modifier: $ => choice(
      'abstract',
      'const',
      'final',
      'internal',
      'native',
      'once',
      'override',
      'private',
      'protected',
      'public',
      'readonly',
      'static',
      'virtual',
    ),

    type_list: $ => seq(
      $.type_ref,
      repeat(seq(',', $.type_ref)),
    ),

    class_body: $ => seq(
      '{',
      repeat($._slot),
      '}',
    ),

    // ============================================
    // Slots (Fields and Methods)
    // ============================================
    _slot: $ => choice(
      $.field_def,
      $.method_def,
      $.ctor_def,
      $.static_init,
    ),

    field_def: $ => seq(
      repeat($.facet),
      repeat($.modifier),
      field('type', $.type_ref),
      field('name', $.identifier),
      optional($.field_accessors),
      optional(seq(':=', field('init', $._expr))),
    ),

    method_def: $ => seq(
      repeat($.facet),
      repeat($.modifier),
      field('return_type', $.type_ref),
      field('name', $.identifier),
      field('params', $.param_list),
      optional(field('body', $.block)),
    ),

    param_list: $ => seq(
      '(',
      optional(seq(
        $.param,
        repeat(seq(',', $.param)),
      )),
      ')',
    ),

    type_ref: $ => choice(
      $.simple_type,
      $.nullable_type,
      $.list_type,
      $.map_type,
      $.shorthand_map_type,  // Key:Val without brackets
      $.func_type,
    ),

    simple_type: $ => prec.right(seq(
      $.qualified_type_name,
      optional($.type_args),
    )),

    qualified_type_name: $ => seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    ),

    // Nullable type can wrap any type form: `Foo?`, `Foo[]?`, `[Str:Int]?`,
    // `Func?`. Previously only wrapped `simple_type`, so common signatures
    // like `FacetDef[]? facets` failed to parse and cascaded into method-def
    // failure.
    nullable_type: $ => prec(2, seq(
      choice($.simple_type, $.list_type, $.map_type),
      '?',
    )),

    list_type: $ => prec.right(2, seq(
      choice($.simple_type, $.list_type),  // permit nested `Foo[][]`
      '[',
      ']',
    )),

    map_type: $ => seq(
      '[',
      field('key', $.type_ref),
      ':',
      field('val', $.type_ref),
      ']',
    ),

    // Shorthand map type without brackets: Str:Int, Str:Str:Obj
    // Used in field/variable declarations
    // Lower precedence than bracketed map_type
    facet: $ => seq(
      '@',
      $.identifier,
      optional(seq(
        '{',
        optional(seq(
          $.facet_pair,
          repeat(seq(choice(',', ';'), $.facet_pair)),
        )),
        '}',
      )),
    ),

    facet_pair: $ => seq(
      $.identifier,
      '=',
      $._expr,
    ),

    // ============================================
    // Statements
    // ============================================
    // A block is `{ stmt sep stmt sep ... }` where sep is either a newline
    // (handled by `extras`) or an explicit `;`. Tokenizer.fan emits `;` as
    // Token.semicolon — required for multi-stmt-per-line idioms like
    // `{ consume; consumeId; consume(Token.rbracket) }`. Without this rule,
    // any Fantom source with `;` separators (Parser.fan, Tokenizer.fan, every
    // serious .fan file) falls into a top-level ERROR span.
    block: $ => seq(
      '{',
      repeat(';'),
      repeat(prec.left(seq($._stmt, repeat(';')))),
      '}',
    ),

    _stmt: $ => choice(
      $.local_def,
      $.return_stmt,
      $.throw_stmt,
      $.if_stmt,
      $.switch_stmt,
      $.while_stmt,
      $.for_stmt,
      $.try_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.expr_stmt,
    ),

    // Local variable declaration. Fantom allows two forms:
    //   <type> <id> [":=" <expr>]      explicit type
    //                <id> ":=" <expr>   inferred type (very common)
    // Parser.fan disambiguates via tryType + backtrack — we use a plain choice
    // and rely on tree-sitter's GLR. Inferred form requires `:=` to distinguish
    // from a bare identifier expression.
    expr_stmt: $ => $._expr,

    // `return` with optional value. Without an external scanner emitting a
    // virtual newline/semicolon, `prec.right` made tree-sitter greedily fold
    // the next statement into the return value (e.g. `return\n    x := 5`
    // parsed `x := 5` as the return expression). Drop the prec.right; the
    // optional remains optional and tree-sitter's GLR picks the shorter
    // legal parse when the next tokens can't extend an expression.
    try_stmt: $ => seq(
      'try',
      $.block,
      repeat($.catch_block),
      optional($.finally_block),
    ),

    catch_block: $ => seq(
      'catch',
      optional(seq('(', $.type_ref, $.identifier, ')')),
      $.block,
    ),

    finally_block: $ => seq('finally', $.block),

    // ============================================
    // Expressions
    // ============================================
    _expr: $ => choice(
      $.assign_expr,
      $.ternary_expr,
      $.elvis_expr,
      $.or_expr,
      $.and_expr,
      $.eq_expr,
      $.cmp_expr,
      $.type_check_expr,
      $.range_expr,
      $.add_expr,
      $.mul_expr,
      $.unary_expr,
      $.cast_expr,
      $.postfix_expr,
      $._primary,
    ),

    // Assignment expression. `:=` is intentionally NOT here — Fantom's `:=`
    // is *declaration* (always introduces a new local), so it lives only in
    // `local_def`. Including `:=` here causes ambiguity with `local_def` and
    // makes `protection := false` unparseable.
    assign_expr: $ => prec.right(1, seq(
      $._expr,
      choice('=', '+=', '-=', '*=', '/=', '%='),
      $._expr,
    )),

    elvis_expr: $ => prec.right(3, seq(
      $._expr,
      '?:',
      $._expr,
    )),

    type_check_expr: $ => prec.left(7, seq(
      $._expr,
      choice('is', 'isnot', 'as'),
      $.type_ref,
    )),

    range_expr: $ => prec.left(8, seq($._expr, choice('..', '..<'), $._expr)),
    add_expr: $ => prec.left(9, seq($._expr, choice('+', '-'), $._expr)),
    postfix_expr: $ => prec.left(12, seq(
      $._expr,
      choice(
        seq($.call_args, optional($.it_block)), // call with optional trailing it-block
        seq('[', $._expr, ']'),
        seq('.', $.identifier),
        seq('?.', $.identifier),
        seq('->', $.identifier),
        seq('?->', $.identifier),
        $.it_block,
        $.closure,
        '++',
        '--',
      ),
    )),

    // It-block for DSL-style configuration. Same statement-list shape as
    // `block` — accepts `;` between statements (e.g. `{ args.add(e); flag = true }`).
    type_literal: $ => prec(1, seq(
      $.qualified_type_name,
      '#',
    )),

    // Slot literal: Int#plus, #echo (higher precedence because more specific)
    call_args: $ => seq(
      '(',
      optional(seq(
        $._arg,
        repeat(seq(',', $._arg)),
      )),
      ')',
    ),

    _arg: $ => seq(
      optional(seq($.identifier, ':')),
      $._expr,
    ),

    // List literals. Fantom additionally allows `Type[,]` — a typed empty
    // list — which is conventional in test code (e.g. `XAttr[,]`).
    closure: $ => seq(
      '|',
      optional(seq($.closure_param, repeat(seq(',', $.closure_param)))),
      optional(seq('->', $.type_ref)),
      '|',
      choice($.block, $._expr),
    ),

    // Closure params can be:
    // - typed with name: Int a
    // - type only (it-block style): This, It
    // - name only (inferred): a
    closure_param: $ => choice(
      seq(field('type', $.type_ref), field('name', $.identifier)),
      field('type', $.type_ref),  // Type only (for |This| f syntax)
      field('name', $.identifier),
    ),

    // DSL string: Type<|...|>
    literal: $ => choice(
      $.null_lit,
      $.bool_lit,
      $.int_lit,
      $.float_lit,
      $.decimal_lit,
      $.str_lit,
      $.triple_str_lit,
      $.char_lit,
      $.uri_lit,
      $.duration_lit,
    ),

    bool_lit: $ => choice('true', 'false'),

    // Integer: decimal, hex, binary
    int_lit: $ => token(choice(
      /0x[0-9a-fA-F_]+/,
      /0b[01_]+/,
      /[0-9][0-9_]*/,
    )),

    // Float: with f/F/d/D suffix optional
    str_lit: $ => seq(
      '"',
      repeat(choice(
        /[^"\\$]+/,
        $.escape,
        $.interpolation,
      )),
      '"',
    ),

    // Triple-quoted string
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
