tree-sitter-fantom/test/corpus/facets.txt
================================================================================
Simple facet
================================================================================

@Serializable
class Foo {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (facet
      (identifier))
    name: (identifier)
    body: (class_body)))

================================================================================
Facet with values
================================================================================

@Serializable { simple = true }
class Foo {
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    (facet
      (identifier)
      (facet_pair
        (identifier)
        (literal
          (bool_lit))))
    name: (identifier)
    body: (class_body)))
